@@ -594,11 +594,34 @@ void get_stepwise_effective_source(MatrixView J,
                                    const ArrayOfRetrievalQuantity& jacobian_quantities,
                                    const bool& jacobian_do);
 
+void rtmethods_jacobian_init(
+         Index&                      j_analytical_do,
+         ArrayOfIndex&               jac_species_i,
+         ArrayOfIndex&               jac_scat_i,
+         ArrayOfIndex&               jac_is_t,
+         ArrayOfIndex&               jac_wind_i,
+         ArrayOfIndex&               jac_mag_i,
+         ArrayOfIndex&               jac_other,
+         ArrayOfIndex&               jac_to_integrate,
+         ArrayOfTensor3&             diy_dx,
+         ArrayOfTensor3&             diy_dpath,         
+   const Index&                      ns,
+   const Index&                      nf,
+   const Index&                      np,
+   const Index&                      nq,
+   const ArrayOfArrayOfSpeciesTag&   abs_species,
+   const ArrayOfString&              scat_species,         
+   const PropmatPartialsData&        ppd,
+   const Index&                      jacobian_do,
+   const ArrayOfRetrievalQuantity&   jacobian_quantities,   
+   const ArrayOfArrayOfIndex&        jacobian_indices, 
+   const Index&                      iy_agenda_call1 );
+
 void rtmethods_jacobian_finalisation(
          ArrayOfTensor3&             diy_dx,
+   const Index&                      ns,
+   const Index&                      nf,
    const Index&                      atmosphere_dim,
-   const Index&                      stokes_dim,
-   const Vector&                     f_grid,         
    const Ppath&                      ppath,
    const Vector&                     ppath_p,
    const Index&                      iy_agenda_call1,         
@@ -610,7 +633,8 @@ void rtmethods_jacobian_finalisation(
 void rtmethods_unit_conversion(
          Matrix&                     iy,
          ArrayOfTensor3&             diy_dx,
-   const Index&                      stokes_dim,
+   const Index&                      ns,
+   const Index&                      np,
    const Vector&                     f_grid,         
    const Ppath&                      ppath,
    const ArrayOfRetrievalQuantity&   jacobian_quantities,
