@@ -1,3 +1,11 @@
+2017-11-20  Patrick Eriksson  <patrick.eriksson@chalmers.se>
+
+	* arts-2-3-876
+
+	* src/m_rte.cc (iyEmissionStandard2): Seems to work for iy.
+
+	* src/rte.cc (rtmethods_jacobian_init): New.
+
 2017-11-20  Oliver Lemke  <olemke@core-dump.info>
 
 	* arts-2-3-875
